--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-    "name": "Iced Boilerplate"
+    "name": "iced-boilerplate"
   , "version": "0.0.1"
   , "private": true
   , "dependencies": {
-      "express": "2.5.2"
+      "express": "2.5.8"
     , "jade": ">= 0.0.1"
   }
 }
